# p1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agentmemory  README.md  alembic.ini  docker-compose.yml  index.html  index.js  next-week-plan.md  p1-ops-office-game.html  pyproject.toml
alembic/: env.py
docs/: architecture.md  build-in-public-system-spec-v1.md  cross-process-testing.md  development.md  fork-first-vendor-workflow.md  glossary.md  hermes-desktop-kanban-runbook.md  l2-runtime-modes.md  overall-system-improvement-plan.md  p1-golden-icp-filters.md  p1-l2l3-real-proof-2026-05-29.md  p1-strict-angel-screener.md  p1-team-runbook.md  p1-telegram-startup-agent.md  runtime-setup.md  yc-application-context.md  yc-codex-session-019e5c94-sanitized.md  yc-coding-agent-session-l2l3-runtime-curated.md
examples/: p1-europe-angel-search.full.json  p1-europe-angel-search.source-only.json  p1-strict-angel-candidates.example.json
scripts/: hermes-desktop-kanban-smoke.js  install-hermes-kanban-ssh-compat.sh  p1-ops-office-game.js  p1-strict-angel-screener.py  p1-telegram-angel-agent.py  p1-telegram-startup-agent.py  p1_real_common.py  p2_telegram_startup_agent.py  real-before-after-proof.py  real-goal-discovery-roundtrip.py  real-p1-cache-proof.py  real-p1-full-proof.py  real-p1-idempotency-proof.py  real-p1-proof-pack.py  real-p1-quality-audit.py  real-p1-readiness.py  real-playbook-acceptance.py  real-playbook-readiness.py  real-regression-cases.py  real-system-review.py  real-trend-radar-acceptance.py  run-p1-team.py  (+1 more)
(+181 files in other folders)
