[project]
name = "l2l3-protocol"
version = "0.1.0"
description = "Memory-aware L2-L3 Communication Protocol runtime"
authors = [
    { name = "Nikita Nosov", email = "20nik.nosov21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "greenlet>=3.5.1",
    "hermes-agent",
    "httpx>=0.28.1",
    "mem0ai>=2.0.2",
    "orjson>=3.11.9",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
l2l3-protocol = "l2l3_protocol.api.main:main"
l2l3-live = "l2l3_protocol.live.cli:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git" }

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
